# open-dense

./: Cargo.toml  README.md
src/: lib.rs  math.rs  protocol.rs  store.rs
src/math/: abel.rs  fermat.rs  galois.rs  gauss.rs
src/math/galois/: binaryfield.rs  irreducible.rs  primefield.rs
src/protocol/: error.rs  ot.rs  party.rs  shamir.rs
src/protocol/ot/: co15.rs  functionality.rs  np01.rs
src/protocol/shamir/: functionality.rs
src/store/: disk.rs  duckdb.rs  redis.rs
