[package]
name = "dense"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.10.6"
crypto-bigint = "0.6.0-rc.0"
duckdb = { version = "0.10.2", features = ["bundled"], optional = true }
k256 = { version = "0.13.3", features = ["ecdh"] }
redis = { version = "0.25.3", optional = true }
serde_json = "1.0.117"
